tests/grammar/lambda/type_annotation/schema/invalid_1/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:9:9
  |
9 |         version: 1
  |         ^ expected str, got int(1)
  |

 --> ${CWD}/main.k:3:5
  |
3 |     version: str
  |     ^ variable is defined here, its type is str, but got int(1)
  |

error[E2G22]: TypeError
  --> ${CWD}/main.k:10:9
   |
10 |         hello: "world"
   |         ^ expected int, got str(world)
   |
